feat: add paginated list of playlists to dashboard
